[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT/Apache-2.0"
name = "english-lint"
repository = "https://github.com/killercup/english-lint"
homepage = "https://github.com/killercup/english-lint"
version = "0.1.0"
documentation = "http://killercup.github.io/english-lint/"
readme = "Readme.md"
description = "Find common stylistic problems in english texts. Works well for technical or scientific documents."
keywords = ["documentation", "text"]

[[bin]]
name = "english-lint"
doc = false

[dependencies]
aho-corasick = "0.5.1"
lazy_static = "0.2.0"
regex = "0.1.66"
